--- a/src/main/java/logic/Presentacion/ConsultaUsuario.form
+++ b/src/main/java/logic/Presentacion/ConsultaUsuario.form
@@ -131,7 +131,7 @@
         <Component class="javax.swing.JTable" name="jTableInformacionAsociada">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;    },&#xa;    new String [] {&#xa;        &quot;Clase&quot;, &quot;URL&quot;, &quot;Actividad Deportiva&quot;, &quot;Descripcion&quot;&#xa;    }&#xa;){&#xa;            @Override&#xa;            public boolean isCellEditable(int row, int column) {&#xa;                return false; // Make all cells non-editable&#xa;            }}" type="code"/>
+              <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;    },&#xa;    new String [] {&#xa;        &quot;Clase&quot;, &quot;Fecha&quot;, &quot;Fecha Registro&quot;, &quot;Hora&quot;,&quot;URL&quot;,&quot;Profesor&quot;&#xa;    }&#xa;){&#xa;    @Override&#xa;    public boolean isCellEditable(int row, int column) {&#xa;        return false; // Make all cells non-editable&#xa;    }}" type="code"/>
             </Property>
             <Property name="enabled" type="boolean" value="false"/>
             <Property name="name" type="java.lang.String" value="Informacion Asociada" noResource="true"/>
@@ -163,7 +163,7 @@
         <Component class="javax.swing.JTable" name="jTableActividadesAsociadas">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;    },&#xa;    new String [] {&#xa;        &quot;Clase&quot;, &quot;URL&quot;, &quot;Actividad Deportiva&quot;, &quot;Descripcion&quot;&#xa;    }&#xa;){&#xa;            @Override&#xa;            public boolean isCellEditable(int row, int column) {&#xa;                return false; // Make all cells non-editable&#xa;            }}" type="code"/>
+              <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;    },&#xa;    new String [] {&#xa;        &quot;Nombre&quot;, &quot;Costo&quot;, &quot;Descripcion&quot;, &quot;Duracion&quot;,&quot;Fecha&quot;&#xa;    }&#xa;){&#xa;    @Override&#xa;    public boolean isCellEditable(int row, int column) {&#xa;        return false; // Make all cells non-editable&#xa;    }}" type="code"/>
             </Property>
             <Property name="enabled" type="boolean" value="false"/>
             <Property name="name" type="java.lang.String" value="Informacion Asociada" noResource="true"/>
